--- a/foundations/fractions/02addition.tex
+++ b/foundations/fractions/02addition.tex
@@ -10,29 +10,241 @@
 \newcommand{\hint}{\subsection*{Hint}}
 
 \begin{document}
-\tableofcontents
-\newpage
+	\tableofcontents
+	\newpage
+	
+	\begin{exercise}{Addition af brøker 1-1}
+		
+		Bestem $\frac{8}{12}+\frac{8}{2}$ og reducér udtrykket.
+		
+		\answerbox{\frac{14}{3}}
+		
+		\hint
+		
+		Bestem fællesnævner
+		\[
+		\frac{8}{12}+\frac{8}{2}  = \frac{8 \cdot 2}{12 \cdot 2}+\frac{12 \cdot 8}{12\cdot 2} 
+		\]
+		
+		\hint
+		
+		Sæt på fælles brøkstreg
+		\[
+		\frac{8 \cdot 2}{12 \cdot 2}+\frac{12 \cdot 8}{12\cdot 2} = \frac{16+96}{24} 
+		\]
+		
+		\hint
+		
+		Reducér brøk
+		\[
+		\frac{112}{24} = \frac{14}{3}
+		\]
+		
+	\end{exercise}
+	
+	\newpage
+	
+	\begin{exercise}{Addition af brøker 1-2}
+		
+		Bestem $\frac{5}{6}+\frac{7}{8}$ og reducér udtrykket.
+		
+		\answerbox{\frac{41}{24}}
+		
+		\hint
+		
+		Bestem fællesnævner
+		\[
+		\frac{5}{6}+\frac{7}{8}  = \frac{5 \cdot 8 }{6 \cdot 8}+\frac{7 \cdot 5}{8\cdot 6} 
+		\]
+		
+		\hint
+		
+		Sæt på fælles brøkstreg
+		\[
+		\frac{5 \cdot 8 }{6 \cdot 8}+\frac{7 \cdot 5}{8\cdot 6}  = \frac{40+42}{48} 
+		\]
+		
+		\hint
+		
+		Reducér brøk
+		\[
+		\frac{82}{48} = \frac{41}{24}
+		\]
+		
+	\end{exercise}
+	
+	\newpage
+	
+	\begin{exercise}{Addition af brøker 1-3}
+		
+		Bestem $\frac{8}{3}+\frac{10}{4}$ og reducér udtrykket.
+		
+		\answerbox{\frac{31}{6}}
+		
+		\hint
+		
+		Bestem fællesnævner
+		\[
+		\frac{8}{3}+\frac{10}{4}  = \frac{8 \cdot 4 }{3 \cdot 4}+\frac{3 \cdot 10}{4\cdot 3} 
+		\]
+		
+		\hint
+		
+		Sæt på fælles brøkstreg
+		\[
+		\frac{8 \cdot 4 }{3 \cdot 4}+\frac{3 \cdot 10}{4\cdot 3}  = \frac{32+30}{12} 
+		\]
+		
+		\hint
+		
+		Reducér brøk
+		\[
+		\frac{62}{12} = \frac{31}{6}
+		\]
+		
+	\end{exercise}
+	
+	\newpage
+	
+	\begin{exercise}{Addition af brøker 1-4}
+		
+		Bestem $\frac{7}{10}+\frac{5}{3}$ og reducér udtrykket.
+		
+		\answerbox{\frac{71}{30}}
+		
+		\hint
+		
+		Bestem fællesnævner
+		\[
+		\frac{7}{10}+\frac{5}{3}  = \frac{7 \cdot 3}{10 \cdot 3}+\frac{5 \cdot 10}{3\cdot 10} 
+		\]
+		
+		\hint
+		
+		Sæt på fælles brøkstreg
+		\[
+		\frac{7 \cdot 3}{10 \cdot 3}+\frac{5 \cdot 10}{3\cdot 10}  = \frac{71}{30} 
+		\]
+		
 
-\begin{exercise}{Differentiering 1-1}
+		
+	\end{exercise}
+	
+	\newpage
+	
+	\begin{exercise}{Addition af brøker 1-5}
+		
+		Bestem $\frac{15}{5}+\frac{3}{7}$ og reducér udtrykket.
+		
+		\answerbox{\frac{24}{7}}
+		
+		\hint
+		
+		Bestem fællesnævner
+		\[
+		\frac{15}{5}+\frac{3}{7}  = \frac{15 \cdot 7}{5 \cdot 7}+\frac{3 \cdot 5}{7\cdot 5} 
+		\]
+		
+		\hint
+		
+		Sæt på fælles brøkstreg
+		\[
+	\frac{15 \cdot 7}{5 \cdot 7}+\frac{3 \cdot 5}{7\cdot 5}  = \frac{105+15}{35} 
+		\]
+		
+		\hint
+		
+		Reducér brøk
+		\[
+		\frac{120}{35} = \frac{24}{7}
+		\]
+		
+	\end{exercise}
+	\newpage
+	
+	\begin{exercise}{Addition af brøker 1-6}
+		
+		Bestem $\frac{2}{9}+\frac{3}{7}$ og reducér udtrykket.
+		
+		\answerbox{\frac{41}{63}}
+		
+		\hint
+		
+		Bestem fællesnævner
+		\[
+		\frac{2}{9}+\frac{3}{7}  = \frac{2 \cdot 7}{9 \cdot 7}+\frac{3 \cdot 9}{7\cdot 9} 
+		\]
+		
+		\hint
+		
+		Sæt på fælles brøkstreg
+		\[
+		 \frac{2 \cdot 7}{9 \cdot 7}+\frac{3 \cdot 9}{7\cdot 9}   = \frac{14+27}{63}  = \frac{41}{63}
+		\]
 
-Bestem $\frac{d}{dx} x^2$.
-bestem balala
-\answerbox{2x}
-
-\hint
-
-Benyt formlen
-\[
-\frac{d}{dx} x^n = n \cdot x^{n - 1}
-\]
-
-\hint
-
-Sæt $n = 2$
-\[
-\frac{d}{dx} x^2 = 2 \cdot x^{2 - 1} = 2 x
-\]
-
-\end{exercise}
-
+		
+	\end{exercise}
+	\newpage
+	
+	\begin{exercise}{Addition af brøker 1-7}
+		
+		Bestem $\frac{8}{4}+\frac{2}{8}$ og reducér udtrykket.
+		
+		\answerbox{\frac{9}{4}}
+		
+		\hint
+		
+		Bestem fællesnævner
+		\[
+		\frac{8}{4}+\frac{2}{8}  = \frac{8 \cdot 8}{4 \cdot 8}+\frac{2 \cdot 4}{8\cdot 4} 
+		\]
+		
+		\hint
+		
+		Sæt på fælles brøkstreg
+		\[
+		 \frac{8 \cdot 8}{4 \cdot 8}+\frac{2 \cdot 4}{8\cdot 4}  = \frac{64+8}{32} 
+		\]
+		
+		\hint
+		
+		Reducér brøk
+		\[
+		\frac{72}{32} = \frac{9}{4}
+		\]
+		
+	\end{exercise}
+	
+	\newpage
+	
+	\begin{exercise}{Addition af brøker 1-8}
+		
+		Bestem $\frac{17}{2}+\frac{3}{4}$ og reducér udtrykket.
+		
+		\answerbox{\frac{37}{4}}
+		
+		\hint
+		
+		Bestem fællesnævner
+		\[
+		\frac{17}{2}+\frac{3}{4}  = \frac{17 \cdot 4}{2 \cdot 4}+\frac{3 \cdot 2}{4\cdot 2} 
+		\]
+		
+		\hint
+		
+		Sæt på fælles brøkstreg
+		\[
+		\frac{17 \cdot 4}{2 \cdot 4}+\frac{3 \cdot 2}{4\cdot 2}   = \frac{68+6}{8} 
+		\]
+		
+		\hint
+		
+		Reducér brøk
+		\[
+		\frac{74}{8} = \frac{37}{4}
+		\]
+		
+	\end{exercise}
+	
+	
 \end{document}
