--- a/foundations/fractions/03subtraction.tex
+++ b/foundations/fractions/03subtraction.tex
@@ -10,29 +10,234 @@
 \newcommand{\hint}{\subsection*{Hint}}
 
 \begin{document}
-\tableofcontents
-\newpage
+	\tableofcontents
+	\newpage
+	
+	\begin{exercise}{Subtraktion af brøker 1-1}
+		
+		Bestem $\frac{8}{12}-\frac{3}{8}$ og reducér udtrykket.
+		
+		\answerbox{\frac{7}{24}}
+		
+		\hint
+		
+		Bestem fællesnævner
+		\[
+		\frac{8}{12}-\frac{3}{8}  = \frac{8 \cdot 8}{12 \cdot 8}-\frac{3 \cdot 12}{8\cdot 12} 
+		\]
+		
+		\hint
+		
+		Sæt på fælles brøkstreg
+		\[
+		\frac{8 \cdot 8}{12 \cdot 8}-\frac{3 \cdot 12}{8\cdot 12}    = \frac{64-36}{96} 
+		\]
+		
+		\hint
+		
+		Reducér brøk
+		\[
+		\frac{28}{96} = \frac{7}{24}
+		\]
+		
+	\end{exercise}
+	
+	\newpage
+	
+	\begin{exercise}{Subtraktion af brøker 1-2}
+		
+		Bestem $\frac{11}{2}-\frac{5}{3}$ og reducér udtrykket.
+		
+		\answerbox{\frac{23}{6}}
+		
+		\hint
+		
+		Bestem fællesnævner
+		\[
+		\frac{11}{2}-\frac{5}{3}  = \frac{11 \cdot 3}{2 \cdot 3}-\frac{5 \cdot 2}{3\cdot 2} 
+		\]
+		
+		\hint
+		
+		Sæt på fælles brøkstreg
+		\[
+		\frac{11 \cdot 3}{2 \cdot 3}-\frac{5 \cdot 2}{3\cdot 2}    = \frac{33-10}{6}  = \frac{23}{6}
+		\]
+		
+		
+	\end{exercise}
+	\newpage
+	
+	\begin{exercise}{Subtraktion af brøker 1-3}
+		
+		Bestem $\frac{7}{4}-\frac{8}{3}$ og reducér udtrykket.
+		
+		\answerbox{\frac{-11}{12}}
+		
+		\hint
+		
+		Bestem fællesnævner
+		\[
+		\frac{7}{4}-\frac{8}{3}  = \frac{7 \cdot 3}{4 \cdot 3}-\frac{8 \cdot 4}{3\cdot 4} 
+		\]
+		
+		\hint
+		
+		Sæt på fælles brøkstreg
+		\[
+		\frac{7 \cdot 3}{4 \cdot 3}-\frac{8 \cdot 4}{3\cdot 4}    = \frac{21-32}{12}  = \frac{-11}{12}
+		\]
+		
+		
+	\end{exercise}
+	
+	\newpage
+	
+	\begin{exercise}{Subtraktion af brøker 1-4}
+		
+		Bestem $\frac{2}{9}-\frac{1}{8}$ og reducér udtrykket.
+		
+		\answerbox{\frac{7}{72}}
+		
+		\hint
+		
+		Bestem fællesnævner
+		\[
+		\frac{2}{9}-\frac{1}{8}  = \frac{2 \cdot 8}{9 \cdot 8}-\frac{1 \cdot 9}{8\cdot 9} 
+		\]
+		
+		\hint
+		
+		Sæt på fælles brøkstreg
+		\[
+		\frac{2 \cdot 8}{9 \cdot 8}-\frac{1 \cdot 9}{8\cdot 9}    = \frac{16-9}{72}  = \frac{7}{72}
+		\]
+		
+		
+	\end{exercise}
+	
+	\newpage
+	
+	\begin{exercise}{Subtraktion af brøker 1-5}
+		
+		Bestem $\frac{-3}{9}-\frac{5}{7}$ og reducér udtrykket.
+		
+		\answerbox{\frac{-22}{21}}
+		
+		\hint
+		
+		Bestem fællesnævner
+		\[
+		\frac{-3}{9}-\frac{5}{7}  = \frac{-3 \cdot 7}{9 \cdot 7}-\frac{5 \cdot 9}{7 \cdot 9} 
+		\]
+		
+		\hint
+		
+		Sæt på fælles brøkstreg
+		\[
+		\frac{-3 \cdot 7}{9 \cdot 7}-\frac{5 \cdot 9}{7 \cdot 9}     = \frac{-21-45}{63} 
+		\]
+		
+		\hint
+		
+		Reducér brøk
+		\[
+		\frac{-66}{63} = \frac{-22}{21}
+		\]
+		
+	\end{exercise}
+	
+	\newpage
+	
+	\begin{exercise}{Subtraktion af brøker 1-6}
+		
+		Bestem $\frac{20}{3}-\frac{1}{3}$ og reducér udtrykket.
+		
+		\answerbox{\frac{19}{3}}
+		
+		\hint
+		
+		Bestem fællesnævner
+		\[
+		\frac{20}{3}-\frac{1}{3}  = \frac{20 \cdot 3}{3 \cdot 3}-\frac{1 \cdot 3}{3 \cdot 3} 
+		\]
+		
+		\hint
+		
+		Sæt på fælles brøkstreg
+		\[
+		\frac{20 \cdot 3}{3 \cdot 3}-\frac{1 \cdot 3}{3 \cdot 3}   = \frac{60-3}{9} 
+		\]
+		
+		\hint
+		
+		Reducér brøk
+		\[
+		\frac{57}{9} = \frac{19}{3}
+		\]
+		
+	\end{exercise}
 
-\begin{exercise}{Differentiering 1-1}
+	\newpage
 
-Bestem $\frac{d}{dx} x^2$.
-
-\answerbox{2x}
-
-\hint
-
-Benyt formlen
-\[
-\frac{d}{dx} x^n = n \cdot x^{n - 1}
-\]
-
-\hint
-
-Sæt $n = 2$
-\[
-\frac{d}{dx} x^2 = 2 \cdot x^{2 - 1} = 2 x
-\]
-
+\begin{exercise}{Subtraktion af brøker 1-7}
+	
+	Bestem $\frac{8}{2}-\frac{6}{10}$ og reducér udtrykket.
+	
+	\answerbox{\frac{17}{5}}
+	
+	\hint
+	
+	Bestem fællesnævner
+	\[
+	\frac{8}{2}-\frac{6}{10}  = \frac{8 \cdot 10}{2 \cdot 10}-\frac{6 \cdot 2}{10 \cdot 2} 
+	\]
+	
+	\hint
+	
+	Sæt på fælles brøkstreg
+	\[
+	\frac{8 \cdot 10}{2 \cdot 10}-\frac{6 \cdot 2}{10 \cdot 2}    = \frac{80-12}{20} 
+	\]
+	
+	\hint
+	
+	Reducér brøk
+	\[
+	\frac{68}{20} = \frac{17}{5}
+	\]
+	
 \end{exercise}
 
+	\newpage
+
+\begin{exercise}{Subtraktion af brøker 1-8}
+	
+	Bestem $\frac{5}{2}-\frac{3}{10}$ og reducér udtrykket.
+	
+	\answerbox{\frac{11}{5}}
+	
+	\hint
+	
+	Bestem fællesnævner
+	\[
+	\frac{5}{2}-\frac{3}{10}  = \frac{5 \cdot 10}{2 \cdot 10}-\frac{3 \cdot 2}{10 \cdot 2} 
+	\]
+	
+	\hint
+	
+	Sæt på fælles brøkstreg
+	\[
+	\frac{5 \cdot 10}{2 \cdot 10}-\frac{3 \cdot 2}{10 \cdot 2}     = \frac{50-6}{20} 
+	\]
+	
+	\hint
+	
+	Reducér brøk
+	\[
+	\frac{44}{20} = \frac{11}{5}
+	\]
+	
+\end{exercise}
+	
 \end{document}
