--- a/foundations/fractions/04multiplication.tex
+++ b/foundations/fractions/04multiplication.tex
@@ -13,26 +13,202 @@
 \tableofcontents
 \newpage
 
-\begin{exercise}{Differentiering 1-1}
+\begin{exercise}{Multiplikation 1-1}
 
-Bestem $\frac{d}{dx} x^2$.
+Bestem $\frac{4}{8} \cdot \frac{10}{5}$ og reducér udtrykket.
 
-\answerbox{2x}
+\answerbox{1}
 
 \hint
 
-Benyt formlen
+Multiplicerer tæller med tæller og nævner med nævner.
 \[
-\frac{d}{dx} x^n = n \cdot x^{n - 1}
+\frac{4}{8} \cdot \frac{10}{5} = \frac{4 \cdot 10}{8 \cdot 5} 
 \]
 
 \hint
 
-Sæt $n = 2$
+Reducér udtrykket.
 \[
-\frac{d}{dx} x^2 = 2 \cdot x^{2 - 1} = 2 x
+\frac{40}{40} = 1
 \]
 
+
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Multiplikation 1-2}
+	
+	Bestem $\frac{5}{7} \cdot \frac{8}{6}$ og reducér udtrykket.
+	
+	\answerbox{\frac{20}{21}}
+	
+	\hint
+	
+	Multiplicerer tæller med tæller og nævner med nævner.
+	\[
+	\frac{5}{7} \cdot \frac{8}{6} = \frac{5 \cdot  8}{7 \cdot 6}
+	\]
+	
+	\hint
+	
+	Reducér udtrykket.
+	\[
+	\frac{40}{42} = \frac{20}{21}
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Multiplikation 1-3}
+	
+	Bestem $\frac{3}{5} \cdot \frac{2}{9}$ og reducér udtrykket.
+	
+	\answerbox{\frac{2}{15}}
+	
+	\hint
+	
+	Multiplicerer tæller med tæller og nævner med nævner.
+	\[
+	\frac{3}{5} \cdot \frac{2}{9}= \frac{3 \cdot 2}{5 \cdot 9} 
+	\]
+	
+	\hint
+	
+	Reducér udtrykket.
+	\[
+	\frac{6}{45} = \frac{2}{15}
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Multiplikation 1-4}
+	
+	Bestem $\frac{12}{5} \cdot \frac{7}{9}$ og reducér udtrykket.
+	
+	\answerbox{ \frac{28}{15}}
+	
+	\hint
+	
+	Multiplicerer tæller med tæller og nævner med nævner.
+	\[
+	\frac{12}{5} \cdot \frac{7}{9} = \frac{12 \cdot 7}{5 \cdot 9} 
+	\]
+	
+	\hint
+	
+	Reducér udtrykket.
+	\[
+	\frac{84}{45} = \frac{28}{15}
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Multiplikation 1-5}
+	
+	Bestem $\frac{3}{7} \cdot \frac{8}{5}$ og reducér udtrykket.
+	
+	\answerbox{\frac{24}{35} }
+	
+	\hint
+	
+	Multiplicerer tæller med tæller og nævner med nævner.
+	\[
+	\frac{3}{7} \cdot \frac{8}{5} = \frac{3 \cdot 8}{7 \cdot 5} 
+	\]
+	
+	\hint
+	
+	Reducér udtrykket.
+	\[
+	\frac{3 \cdot 8}{7 \cdot 5} = \frac{24}{35} 
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Multiplikation 1-6}
+	
+	Bestem $\frac{11}{3} \cdot \frac{2}{4}$ og reducér udtrykket.
+	
+	\answerbox{\frac{11}{6}}
+	
+	\hint
+	
+	Multiplicerer tæller med tæller og nævner med nævner.
+	\[
+	\frac{11}{3} \cdot \frac{2}{4}= \frac{11 \cdot 2}{3 \cdot 4} 
+	\]
+	
+	\hint
+	
+	Reducér udtrykket.
+	\[
+	\frac{22}{12} = \frac{11}{6}
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Multiplikation 1-7}
+	
+	Bestem $\frac{9}{8} \cdot \frac{7}{6}$ og reducér udtrykket.
+	
+	\answerbox{ \frac{21}{16}}
+	
+	\hint
+	
+	Multiplicerer tæller med tæller og nævner med nævner.
+	\[
+	\frac{9}{8} \cdot \frac{7}{6} = \frac{9 \cdot 7}{8 \cdot 6} 
+	\]
+	
+	\hint
+	
+	Reducér udtrykket.
+	\[
+	\frac{63}{48} = \frac{21}{16}
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Multiplikation 1-8}
+	
+	Bestem $\frac{3}{10} \cdot \frac{2}{9}$ og reducér udtrykket.
+	
+	\answerbox{\frac{1}{15}}
+	
+	\hint
+	
+	Multiplicerer tæller med tæller og nævner med nævner.
+	\[
+	\frac{3}{10} \cdot \frac{2}{9} = \frac{3 \cdot 2}{10 \cdot 9} 
+	\]
+	
+	\hint
+	
+	Reducér udtrykket.
+	\[
+	\frac{6}{90} = \frac{1}{15}
+	\]
+	
+	
 \end{exercise}
 
 \end{document}
