Tilføjede opgaver med division af brøker

--- a/foundations/fractions/05division.tex
+++ b/foundations/fractions/05division.tex
@@ -13,26 +13,245 @@
 \tableofcontents
 \newpage
 
-\begin{exercise}{Differentiering 1-1}
+\begin{exercise}{Division 1-1}
 
-Bestem $\frac{d}{dx} x^2$.
+Bestem $\frac{5}{2} \div \frac{5}{3}$ og reducér udtrykket.
 
-\answerbox{2x}
+\answerbox{ \frac{3}{2}}
 
 \hint
 
-Benyt formlen
+Dividerer de to brøker ved at multiplicere med den omvendte brøk(eller på kryds).
 \[
-\frac{d}{dx} x^n = n \cdot x^{n - 1}
+\frac{5}{2} \div \frac{5}{3} = \frac{5}{2} \cdot \frac{3}{5}
 \]
 
 \hint
 
-Sæt $n = 2$
+Sæt på fælles brøkstreg
 \[
-\frac{d}{dx} x^2 = 2 \cdot x^{2 - 1} = 2 x
+ \frac{5}{2} \cdot \frac{3}{5} = \frac{5 \cdot 3}{2 \cdot 5}
 \]
 
+\hint
+
+Reducér udtrykket.
+\[
+\frac{15}{10} = \frac{3}{2} 
+\]
+
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Division 1-2}
+	
+	Bestem $\frac{7}{9} \div \frac{8}{6}$ og reducér udtrykket.
+	
+	\answerbox{\frac{7}{12} }
+	
+	\hint
+	
+	Dividerer de to brøker ved at multiplicere med den omvendte brøk(eller på kryds).
+	\[
+	\frac{7}{9} \div \frac{8}{6} = \frac{7}{9} \cdot \frac{6}{8}
+	\]
+	
+	\hint
+	
+	Sæt på fælles brøkstreg
+	\[
+	\frac{7}{9} \cdot \frac{6}{8} = \frac{7 \cdot 6}{9 \cdot 8}
+	\]
+	
+	\hint
+	
+	Reducér udtrykket.
+	\[
+	\frac{42}{72} = \frac{7}{12} 
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Division 1-3}
+	
+	Bestem $\frac{4}{6} \div \frac{7}{9}$ og reducér udtrykket.
+	
+	\answerbox{ \frac{6}{7}}
+	
+	\hint
+	
+	Dividerer de to brøker ved at multiplicere med den omvendte brøk(eller på kryds).
+	\[
+	\frac{4}{6} \div \frac{7}{9} = \frac{4}{6} \cdot \frac{9}{7}
+	\]
+	
+	\hint
+	
+	Sæt på fælles brøkstreg
+	\[
+	\frac{4}{6} \cdot \frac{9}{7} = \frac{4 \cdot 9}{6 \cdot 7}
+	\]
+	
+	\hint
+	
+	Reducér udtrykket.
+	\[
+	\frac{36}{42} = \frac{6}{7} 
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Division 1-4}
+	
+	Bestem $\frac{5}{3} \div \frac{10}{7}$ og reducér udtrykket.
+	
+	\answerbox{\frac{7}{6} }
+	
+	\hint
+	
+	Dividerer de to brøker ved at multiplicere med den omvendte brøk(eller på kryds).
+	\[
+	\frac{5}{3} \div \frac{10}{7} = \frac{5}{3} \cdot \frac{7}{10}
+	\]
+	
+	\hint
+	
+	Sæt på fælles brøkstreg
+	\[
+	 \frac{5}{3} \cdot \frac{7}{10} = \frac{5 \cdot 7}{3 \cdot 10}
+	\]
+	
+	\hint
+	
+	Reducér udtrykket.
+	\[
+	\frac{35}{30} = \frac{7}{6} 
+	\]
+	
+\end{exercise}
+
+
+\newpage
+
+\begin{exercise}{Division 1-5}
+	
+	Bestem $\frac{7}{12} \div \frac{2}{3}$ og reducér udtrykket.
+	
+	\answerbox{ \frac{7}{8}}
+	
+	\hint
+	
+	Dividerer de to brøker ved at multiplicere med den omvendte brøk(eller på kryds).
+	\[
+	\frac{7}{12} \div \frac{2}{3} = \frac{7}{12} \cdot \frac{3}{2}
+	\]
+	
+	\hint
+	
+	Sæt på fælles brøkstreg
+	\[
+	\frac{7}{12} \cdot \frac{3}{2} = \frac{7 \cdot 3}{12 \cdot 2}
+	\]
+	
+	\hint
+	
+	Reducér udtrykket.
+	\[
+	\frac{21}{24} = \frac{7}{8} 
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Division 1-6}
+	
+	Bestem $\frac{11}{3} \div \frac{3}{15}$ og reducér udtrykket.
+	
+	\answerbox{\frac{55}{3}}
+	
+	\hint
+	
+	Dividerer de to brøker ved at multiplicere med den omvendte brøk(eller på kryds).
+	\[
+	\frac{11}{3} \div \frac{3}{15} = \frac{11}{3} \cdot \frac{15}{3}
+	\]
+	
+	\hint
+	
+	Sæt på fælles brøkstreg
+	\[
+	\frac{11}{3} \cdot \frac{15}{3} = \frac{11 \cdot 15}{3 \cdot 3}
+	\]
+	
+	\hint
+	
+	Reducér udtrykket.
+	\[
+	\frac{165}{9} = \frac{55}{3} 
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Division 1-7}
+	
+	Bestem $\frac{11}{3} \div \frac{7}{14}$ og reducér udtrykket.
+	
+	\answerbox{ \frac{22}{3} }
+	
+	\hint
+	
+	Dividerer de to brøker ved at multiplicere med den omvendte brøk(eller på kryds).
+	\[
+	\frac{11}{3} \div \frac{7}{14} = \frac{11}{3} \cdot \frac{14}{7}
+	\]
+	
+	\hint
+	
+	Reducér og multiplicer konstant ind i brøk
+	\[
+	\frac{11}{3} \cdot 2 = \frac{22}{3} 
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Division 1-8}
+	
+	Bestem $\frac{4}{3} \div \frac{5}{12}$ og reducér udtrykket.
+	
+	\answerbox{\frac{16}{5} }
+	
+	\hint
+	
+	Dividerer de to brøker ved at multiplicere med den omvendte brøk(eller på kryds).
+	\[
+	\frac{4}{3} \div \frac{5}{12} = \frac{4}{3} \cdot \frac{12}{5}
+	\]
+	
+	\hint
+	
+	Sæt på fælles brøkstreg
+	\[
+	\frac{4}{3} \cdot \frac{12}{5} = \frac{4 \cdot 12}{3 \cdot 5}
+	\]
+	
+	\hint
+	
+	Reducér udtrykket.
+	\[
+	\frac{48}{15} = \frac{16}{5} 
+	\]
+	
 \end{exercise}
 
 \end{document}
