Tilføjede opgaver til simplificeringen af brøker

--- a/foundations/fractions/01simplicification.tex
+++ b/foundations/fractions/01simplicification.tex
@@ -13,26 +13,247 @@
 \tableofcontents
 \newpage
 
-\begin{exercise}{Differentiering 1-1}
+\begin{exercise}{Simplificering 1-1}
 
-Bestem $\frac{d}{dx} x^2$.
+Reducer udtrykket $\frac{2a+b}{a}$
 
-\answerbox{2x}
+\answerbox{2 + \frac{b}{a}}
 
 \hint
 
-Benyt formlen
+Opdel  til to brøker.
 \[
-\frac{d}{dx} x^n = n \cdot x^{n - 1}
+\frac{2a+b}{a} = \frac{2a}{a} + \frac{b}{a}
 \]
 
 \hint
 
-Sæt $n = 2$
+Reducer udtryk 
 \[
-\frac{d}{dx} x^2 = 2 \cdot x^{2 - 1} = 2 x
+\frac{2a}{a} + \frac{b}{a}  = 2 + \frac{b}{a}
 \]
 
 \end{exercise}
+
+\newpage
+
+\begin{exercise}{Simplificering 1-2}
+	
+	Reducer udtrykket $\frac{2 \cdot 4}{3 \cdot 6}$
+	
+	\answerbox{\frac{4}{9}}
+	
+	\hint
+	
+	Beregn nævner og tæller.
+	\[
+	\frac{2 \cdot 4}{3 \cdot 6}  = \frac{8}{18} 
+	\]
+	
+	\hint
+	
+	Reducer udtryk.
+	\[
+	\frac{8}{18} = \frac{2 \cdot 4}{2 \cdot 9} = \frac{4}{9}
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Simplificering 1-3}
+	
+	Reducer udtrykket $\frac{3a+4a+a^2}{2a}$
+	
+	\answerbox{\frac{7+a}{2}}
+	
+	\hint
+	
+	Beregn tæller.
+	\[
+	\frac{3a+4a+a^2}{2a} = \frac{7a+a^2}{2a}
+	\]
+	
+	\hint
+	
+	Opdel brøk i to brøker.
+	\[
+	\frac{7a+a^2}{2a}  = \frac{7a}{2a} + \frac{a^2}{2a} 
+	\]
+	
+	\hint
+	
+	Reducer udtryk
+	\[
+	\frac{7a}{2a} + \frac{a^2}{2a}  = \frac{7}{2} + \frac{a}{2}
+	\]	 
+	
+	\hint
+	
+	Sæt på fælles brøkstreg
+	\[
+	\frac{7}{2} + \frac{a}{2} = \frac{7+a}{2} 
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Simplificering 1-4}
+	
+	Reducer udtrykket $\frac{3 \cdot 5}{10 \cdot 2}$
+	
+	\answerbox{\frac{3}{4}}
+	
+	\hint
+	
+	Bestem tæller og nævner.
+	\[
+	\frac{3 \cdot 5}{10 \cdot 2} = \frac{15}{20}
+	\]
+	
+	\hint
+	
+	Omskriv udtryk
+	\[
+	 \frac{15}{20} = \frac{3 \cdot 5}{4 \cdot 5}
+	\]
+	
+	\hint 
+	
+	Reducer udtryk.
+	\[
+	\frac{3 \cdot 5}{4 \cdot 5} = \frac{3}{4}
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Simplificering 1-5}
+	
+	Reducer udtrykket $\frac{a \cdot a \cdot a \cdot a \cdot a + a}{a}$
+	
+	\answerbox{a^4 + 1}
+	
+	\hint
+	
+	Reducer tæller.
+	\[
+	\frac{a \cdot a \cdot a \cdot a \cdot a + a}{a}  = \frac{a^5+a}{a}
+	\]
+	
+	\hint 
+	
+	Opdel  til to brøker.
+	\[
+	\frac{a^5+a}{a} = \frac{a^5}{a} + \frac{a}{a}
+	\]
+	
+	\hint
+	
+	Reducer udtryk 
+	\[
+	 \frac{a^5}{a} + \frac{a}{a} = a^4 + 1
+	\]
+		
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Simplificering 1-6}
+	
+	Reducer udtrykket $\frac{2a(a+b)}{2ab}$
+	
+	\answerbox{\frac{a}{b} + 1}
+	
+	\hint
+	
+	Gang ind i parentes.
+	\[
+	\frac{2a(a+b)}{2ab} = \frac{2a^2 + 2ab}{2ab}
+	\]
+	
+	\hint
+	
+	Opdel i to brøker.
+	\[
+	 \frac{2a^2 + 2ab}{2ab} = \frac{2a^2}{2ab} + \frac{2ab}{2ab}
+	\]
+	
+	
+	\hint
+	
+	Reducer udtryk 
+	\[
+	\frac{2a^2}{2ab} + \frac{2ab}{2ab} = \frac{a}{b} + 1
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Simplificering 1-7}
+	
+	Reducer udtrykket $\frac{7 \cdot 9 + 1}{3 \cdot 8}$
+	
+	\answerbox{\frac{8}{3}}
+	
+	\hint
+	
+	Udregn tæller og nævner.
+	\[
+	\frac{7 \cdot 9 + 1}{3 \cdot 8} = \frac{63+1}{24} = \frac{64}{24}
+	\]
+	
+	\hint
+
+	Omskriv udtryk 
+	\[
+	\frac{64}{24} = \frac{8 \cdot 8}{8 \cdot 3}
+	\]	
+	
+	\hint
+	
+	Reducer udtryk 
+	\[
+	\frac{8 \cdot 8}{8 \cdot 3} = \frac{8}{3}
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Simplificering 1-8}
+	
+	Reducer udtrykket $\frac{12 \cdot 3}{6 \cdot 9}$
+
+	\answerbox{\frac{2}{3}}
+
+	\hint
+
+	Udregn tæller og nævner.
+	\[
+	\frac{12 \cdot 3}{6 \cdot 9} = \frac{36}{54}
+	\]
+	
+	\hint
+
+	Omskriv udtryk 
+	\[
+	\frac{36}{54} = \frac{18 \cdot 2}{18 \cdot 3} 
+	\]
+
+	\hint
+
+	Reducer udtryk 
+	\[
+	 \frac{18 \cdot 2}{18 \cdot 3} = \frac{2}{3}
+	\]
+	
+\end{exercise}
+
+
+
 
 \end{document}
