Tilføjede opgaver med potensregneregler(1)

--- a/foundations/exponents/01addexponents.tex
+++ b/foundations/exponents/01addexponents.tex
@@ -13,26 +13,195 @@
 \tableofcontents
 \newpage
 
-\begin{exercise}{Differentiering 1-1}
+\begin{exercise}{Potensregneregler 1-1}
 
-Bestem $\frac{d}{dx} x^2$.
+Bestem $a^3 \cdot a^5$.
 
-\answerbox{2x}
+\answerbox{a^8}
 
 \hint
 
 Benyt formlen
 \[
-\frac{d}{dx} x^n = n \cdot x^{n - 1}
+x^n \cdot x^m = x^{n+m}
 \]
 
 \hint
 
-Sæt $n = 2$
+Indsæt $x=a$, $n=3$ og $m=5$.
 \[
-\frac{d}{dx} x^2 = 2 \cdot x^{2 - 1} = 2 x
+a^3 \cdot a^5 = a^{3+5} = a^8
 \]
 
 \end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 1-2}
+	
+	Bestem $a^1 \cdot a^1$.
+	
+	\answerbox{a^2}
+	
+	\hint
+	
+	Benyt formlen
+	\[
+	x^n \cdot x^m = x^{n+m}
+	\]
+	
+	\hint
+	
+	Indsæt $x=a$, $n=1$ og $m=1$.
+	\[
+	a^1 \cdot a^1 = a^{1+1} = a^2
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 1-3}
+	
+	Bestem $a^8 \cdot a^2$.
+	
+	\answerbox{a^{10}}
+	
+	\hint
+	
+	Benyt formlen
+	\[
+	x^n \cdot x^m = x^{n+m}
+	\]
+	
+	\hint
+	
+	Indsæt $x=a$, $n=8$ og $m=2$.
+	\[
+	a^8 \cdot a^2 = a^{8+2} = a^{10}
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 1-4}
+	
+	Bestem $10 \cdot a^4 \cdot a^2$.
+	
+	\answerbox{10 \cdot a^6}
+	
+	\hint
+	
+	Benyt formlen
+	\[
+	x^n \cdot x^m = x^{n+m}
+	\]
+	
+	\hint
+	
+	Indsæt $x=a$, $n=4$ og $m=2$.
+	\[
+	10 \cdot a^4 \cdot a^2 = 10 \cdot a^{4+2} =  10 \cdot a^6
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 1-5}
+	
+	Bestem $-10 \cdot a^2 \cdot 10 \cdot a^3$.
+	
+	\answerbox{-100 \cdot a^5}
+	
+	\hint
+	
+	Benyt formlen
+	\[
+	x^n \cdot x^m = x^{n+m}
+	\]
+	
+	\hint
+	
+	Indsæt $x=a$, $n=2$ og $m=3$.
+	\[
+	-10 \cdot a^2 \cdot 10 \cdot a^3 = -10 \cdot 10 \cdot a^{2+3} =  -100 \cdot a^5
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 1-6}
+	
+	Bestem $a^5 \cdot 4 \cdot  a^3$.
+	
+	\answerbox{4 \cdot a^8}
+	
+	\hint
+	
+	Benyt formlen
+	\[
+	x^n \cdot x^m = x^{n+m}
+	\]
+	
+	\hint
+	
+	Indsæt $x=a$, $n=5$ og $m=3$.
+	\[
+	a^5 \cdot 4 \cdot a^3 = 4 \cdot a^{5+3} = 4 \cdot a^8
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 1-7}
+	
+	Bestem $a^3 + a^7 \cdot a^2$.
+	
+	\answerbox{a^3 + a^9}
+	
+	\hint
+	
+	Benyt formlen
+	\[
+	x^n \cdot x^m = x^{n+m}
+	\]
+	
+	\hint
+	
+	Indsæt $x=a$, $n=7$ og $m=2$.
+	\[
+	a^3 + a^7 \cdot a^2 = a^3 + a^{7+2} = a^3 + a^9
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 1-8}
+	
+	Bestem $a^0 \cdot a^2$.
+	
+	\answerbox{a^2}
+	
+	\hint
+	
+	Udnyt at
+	\[
+	x^0 = 1
+	\]
+	
+	\hint
+	
+	Indsæt $a^0=1$
+	\[
+	a^0 \cdot a^2 = 1 \cdot a^2 = a^2
+	\]
+	
+\end{exercise}
+
 
 \end{document}
