Tilføjede opgaver med potensregneregler(2)

--- a/foundations/exponents/02negativeexponents.tex
+++ b/foundations/exponents/02negativeexponents.tex
@@ -13,26 +13,226 @@
 \tableofcontents
 \newpage
 
-\begin{exercise}{Differentiering 1-1}
+\begin{exercise}{Potensregneregler 2-1}
 
-Bestem $\frac{d}{dx} x^2$.
+Bestem $2^{-6} \cdot 4^4$.
 
-\answerbox{2x}
+\answerbox{4}
 
-\hint
-
-Benyt formlen
+\hint 
+Omskriv udtrykket
 \[
-\frac{d}{dx} x^n = n \cdot x^{n - 1}
+2^{-6} \cdot 4^4 = 2^{-6} \cdot (2 \cdot 2)^4
 \]
 
 \hint
 
-Sæt $n = 2$
+Benyt potensregnereglen $(x \cdot y)^n = x^n \cdot y^n$
 \[
-\frac{d}{dx} x^2 = 2 \cdot x^{2 - 1} = 2 x
+2^{-6} \cdot (2 \cdot 2)^4 = 2^{-6} \cdot 2^4 \cdot 2^4
+\]
+
+\hint
+Benyt potensregnereglen $ x^n \cdot x^m  = x^{n+m}$
+\[
+2^{-6} \cdot 2^4 \cdot 2^4 = 2^{-6+4+4} = 2^2  = 4
 \]
 
 \end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 2-2}
+	
+	Bestem $a^{-5} \cdot a^{-3}$.
+	
+	\answerbox{a^{-8}}
+	
+	\hint
+	
+	Benyt potensregnereglen 
+	\[
+	x^n \cdot x^m  = x^{n+m}
+	\] 
+	\hint 
+	
+	Sæt $x=a$, $n=-5$ og $m=-3$.
+	\[
+	a^{-5} \cdot a^{-3} = a^{-5-3} = a^{-8}
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 2-3}
+	
+	Bestem $a^{3} \cdot a^{9}$.
+	
+	\answerbox{a^{-6}}
+	
+	\hint
+	Benyt potensregnereglen 
+	\[
+	x^n \cdot x^m  = x^{n+m}
+	\] 
+	
+	\hint 
+	
+	Sæt $x=a$, $n=3$ og $m=-9$.
+	\[
+	a^{3} \cdot a^{-9} = a^{3-9} = a^{-6}
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 2-4}
+	
+	Bestem $\frac{1}{a^{-2}} \cdot a^{2}$.
+	
+	\answerbox{a^{4}}
+	
+	\hint
+	Benyt potensregnereglen 
+	\[
+	 x^{-n} = \frac{1}{x^{n}} 
+	\]
+	
+	\hint 
+	
+	Omskriv udtrykket
+	\[
+	\frac{1}{a^{-2}} \cdot a^{2} = a^{-(-2)} \cdot a^2 	= a^2 \cdot a^2
+	\]
+	
+	\hint
+	Benyt potensregnereglen 
+	\[
+	x^n \cdot x^m  = x^{n+m}
+	\]
+	
+	\hint 
+	
+	Sæt $x=a$, $n=2$ og $m=2$.
+	\[
+	a^{2} \cdot a^{2} = a^{2+2} = a^{4}
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 2-5}
+	
+	Bestem $-2^{-4}$.
+	
+	\answerbox{\frac{1}{16}}
+	
+	\hint
+	Benyt potensregnereglen 
+	\[
+	x^{-n} = \frac{1}{x^{n}} 
+	\]
+	
+	\hint 
+	
+	Sæt $x=-2$ og $n=4$ 
+	\[
+	-2^{-4} = \frac{1}{-2^4} = \frac{1}{16}
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 2-6}
+	
+	Bestem $3^{-2}$.
+	
+	\answerbox{\frac{1}{9}}
+	
+	\hint
+	Benyt potensregnereglen 
+	\[
+	x^{-n} = \frac{1}{x^{n}} 
+	\]
+	
+	\hint 
+	
+	Sæt $x=3$ og $n=2$ 
+	\[
+	3^{-2} = \frac{1}{3^2} = \frac{1}{9}
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 2-7}
+	
+	Bestem $4 \cdot (a \cdot b)^{-2} \cdot a^2$
+		
+	\answerbox{4 \cdot b^{-2}}
+	
+	\hint
+	
+	Benyt potensregnereglen $(x \cdot y)^n = x^n \cdot y^n$
+	\[
+	4 \cdot (a \cdot b)^{-2} \cdot a^2 = 4 \cdot a^{-2} \cdot b^{-2} \cdot a^{2}
+	\]
+	
+	\hint
+	Benyt potensregnereglen 
+	\[
+	x^n \cdot x^m  = x^{n+m} 
+	\]
+	
+	\hint 
+	
+	Reducer udtryk
+	\[
+	4 \cdot a^{-2} \cdot b^{-2} \cdot a^{2} = 4 \cdot a^{-2+2} \cdot b^{-2} = 4 \cdot b^{-2}
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 2-8}
+	
+	Bestem $(4 \cdot x \cdot y^2)^2 \cdot (x \cdot y)^{-2}$
+	
+	\answerbox{16 \cdot y^2}
+	
+	\hint
+	
+	Benyt potensregnereglen $(x \cdot y)^n = x^n \cdot y^n$
+	\[
+	(4 \cdot x \cdot y^2)^2 \cdot (x \cdot y)^{-2} = 4^2 \cdot x^2 \cdot {y^2}^2 \cdot x^{-2} \cdot y^{-2}
+	\]
+		
+	\hint
+	Benyt potensregnereglen 
+	\[
+	(x^n)^m = x^{n \cdot m}
+	\]
+	
+	\hint 
+	Reducer udtryk vha. potensregnereglen $x^n \cdot x^m  = x^{n+m}$
+	\[
+	16 \cdot x^2 \cdot y^{2\cdot 2} \cdot x^{-2} \cdot y^{-2} = 16 \cdot x^{2-2} \cdot y^{4-2}
+	\]
+	
+	\hint 
+	
+	Reducer udtryk
+	\[
+	16 \cdot x^{2-2} \cdot y^{4-2} = 16 \cdot y^2
+	\]
+	
+\end{exercise}
+
 
 \end{document}
