Tilføjede opgaver med potensregneregler(3)

--- a/foundations/exponents/03groupfactorswithsamepower.tex
+++ b/foundations/exponents/03groupfactorswithsamepower.tex
@@ -13,26 +13,351 @@
 \tableofcontents
 \newpage
 
-\begin{exercise}{Differentiering 1-1}
+\begin{exercise}{Potensregneregler 3-1}
 
-Bestem $\frac{d}{dx} x^2$.
+Bestem $\left(\frac{8}{27}\right)^{2/3}$.
 
-\answerbox{2x}
+\answerbox{\frac{4}{9}}
 
 \hint
 
-Benyt formlen
+Omskriv udtrykket
 \[
-\frac{d}{dx} x^n = n \cdot x^{n - 1}
+\left(\frac{8}{27}\right)^{2/3} = \left(\frac{2^3}{3^3}\right)^{2/3}
 \]
 
 \hint
 
-Sæt $n = 2$
+Benyt potensregnereglen
 \[
-\frac{d}{dx} x^2 = 2 \cdot x^{2 - 1} = 2 x
+\left(\frac{x}{y}\right)^a = \frac{x^a}{y^a}
 \]
+
+\hint
+
+Sæt $a=3$ og omskriv udtrykket
+\[
+\left(\frac{2^3}{3^3}\right)^{2/3}  = {\left( \left( \frac{2}{3} \right)^3 \right)}^{2/3} 
+\]
+
+\hint
+
+Benyt potensregnereglen
+\[
+(x^n)^m = x^{n \cdot m}
+\]
+
+\hint
+
+Reducer udtrykket
+\[
+{\left( \left( \frac{2}{3} \right)^3 \right)}^{2/3}  = {\left( \frac{2}{3} \right)}^{ 3 \cdot 2/3}  = {\left(\frac{2}{3}\right)}^2
+\]
+
+\hint
+
+Benyt potensregnereglen
+\[
+\left(\frac{x}{y}\right)^a = \frac{x^a}{y^a}
+\]
+
+\hint
+
+Reducer udtryk
+\[
+{\left(\frac{2}{3}\right)}^2 = \frac{2^2}{3^2}  = \frac{4}{9}
+ \]
+
 
 \end{exercise}
 
+\newpage
+
+\begin{exercise}{Potensregneregler 3-2}
+	
+	Bestem $\left(\frac{64}{16}\right)^{-1}$.
+	
+	\answerbox{\frac{1}{4}}
+	
+	
+	\hint
+	
+	Benyt potensregnereglen
+	\[
+	x^{-n} = \frac{1}{x^n}
+	\]
+	
+	\hint 
+	Omskriv udtrykket
+	\[
+	\left(\frac{64}{16}\right)^{-1} = \left(\frac{16}{64}\right)^1 = \frac{16}{64}
+	\]
+	
+	\hint
+	
+	Reducer udtrykket
+	\[
+	\frac{16}{64} = \frac{16}{16 \cdot 4} = \frac{1}{4}
+	\]
+	
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 3-3}
+	
+	Bestem $\left(\frac{25}{36}\right)^{3/2}$.
+	
+	\answerbox{\frac{125}{216}}
+	
+	\hint
+	
+	Omskriv udtrykket
+	\[
+	\left(\frac{25}{36}\right)^{3/2}= \left(\frac{5^2}{6^2}\right)^{3/2}
+	\]
+	
+	\hint
+	
+	Benyt potensregnereglen
+	\[
+	\left(\frac{x}{y}\right)^a = \frac{x^a}{y^a}
+	\]
+	
+	\hint
+	
+	Sæt $a=2$ og omskriv udtrykket
+	\[
+	\left(\frac{5^2}{6^2}\right)^{3/2} = \left({\left(\frac{5}{6}\right)^2} \right)^{3/2}
+	\]
+	
+	\hint
+	
+	Benyt potensregnereglen
+	\[
+	(x^n)^m = x^{n \cdot m}
+	\]
+	
+	\hint
+	
+	Reducer udtrykket
+	\[
+	 \left({\left(\frac{5}{6}\right)^2} \right)^{3/2} = \left(\frac{5}{6}\right)^{2 \cdot 3/2} = \left(\frac{5}{6}\right)^{3} 
+	\]
+	
+	\hint
+	
+	Benyt potensregnereglen
+	\[
+	\left(\frac{x}{y}\right)^a = \frac{x^a}{y^a}
+	\]
+	
+	\hint
+	
+	Reducer udtryk
+	\[
+	\left(\frac{5}{6}\right)^{3} = \frac{5^3}{6^3} = \frac{125}{216}
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 3-4}
+	
+	Bestem $\left(\frac{16}{81}\right)^{-1/4}$.
+	
+	\answerbox{\frac{3}{2}}
+	
+	\hint
+
+	Benyt potensregnereglen
+	\[
+	x^{-n} = \frac{1}{x^n}
+	\]
+	
+	\hint
+	
+	Omskriv udtrykket
+	\[
+	\left(\frac{16}{81}\right)^{-1/4}= \left(\frac{81}{16}\right)^{1/4}
+	\]
+	
+	\hint
+	
+	Benyt potensregnereglen
+	\[
+	\left(\frac{x}{y}\right)^a = \frac{x^a}{y^a}
+	\]
+	
+	\hint
+	
+	Sæt $a=1/4$ og omskriv udtrykket
+	\[
+	\left(\frac{81}{16}\right)^{1/4} = \frac{81^{\left(1/4\right)}}{16^{\left(1/4\right)}}
+	\]
+	
+	\hint
+	
+	Omskriver til 4. roden af tæller og nævner
+	\[
+	\frac{81^{\left(1/4\right)}}{16^{\left(1/4\right)}} = \frac{\sqrt[4]{81}}{\sqrt[4]{16}}
+	\]
+	
+	\hint
+	
+	Reducer udtrykket
+	\[
+	\frac{\sqrt[4]{81}}{\sqrt[4]{16}} = \frac{3}{2}
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 3-5}
+	
+	Bestem $5^2 \cdot 4^2 \cdot 3^2$.
+	
+	\answerbox{3600}
+	
+	\hint
+	
+	Benyt potensregnereglen
+	\[
+	(x \cdot y)^n = x^n \cdot y^n
+	\]
+	
+	\hint
+	
+	Sæt $n=2$ og omskriv udtrykket
+	\[
+	5^2 \cdot 4^2 \cdot 3^2  = \left(5 \cdot 4 \cdot 3 \right)^2	
+	\]
+	
+	\hint
+	
+	Reducer udtryk
+	\[
+	\left(5 \cdot 4 \cdot 3 \right)^2  = 60^2 = 3600
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 3-6}
+	
+	Bestem $(2ab)^3 \cdot a^{-3}+4b^3$.
+	
+	\answerbox{12b^3}
+	
+	\hint
+	
+	Benyt potensregnereglen
+	\[
+	(x \cdot y)^n = x^n \cdot y^n
+	\]
+	
+	\hint
+	
+	Sæt $n=3$ og omskriv udtrykket
+	\[
+	(2ab)^3 \cdot a^{-3}+4b^3 = 2^3 \cdot a^3 \cdot b^3 \cdot a^{-3}+4b^3 
+	\]
+	
+	
+	\hint
+	
+	Benyt potensregnereglen
+	\[
+	x^n \cdot x^m = x^{n+m}
+	\]
+	
+	\hint
+	
+	Reducer udtryk
+	\[
+	2^3 \cdot a^3 \cdot b^3 \cdot a^{-3}+4b^3 = 8 b^3 \cdot a^{3-3} + 4b^3
+	\]
+	
+	\hint 
+	
+	Reducer udtryk
+	\[
+	8 b^3 \cdot a^{3-3} + 4b^3 = 8 b^3 + 4b^3  = 12b^3
+	\]
+	
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 3-7}
+	
+	Bestem $6^2 \cdot 5^2 \cdot 3^2$.
+	
+	\answerbox{8100}
+	
+	\hint
+	
+	Benyt potensregnereglen
+	\[
+	(x \cdot y)^n = x^n \cdot y^n
+	\]
+	
+	\hint
+	
+	Sæt $n=2$ og omskriv udtrykket
+	\[
+	6^2 \cdot 5^2 \cdot 3^2 = (6 \cdot 5 \cdot 3)^2
+	\]
+	
+	\hint
+
+	Reducer udtryk
+	\[
+	(6 \cdot 5 \cdot 3)^2 = 90^2 = 8100
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 3-8}
+	
+	Bestem $5^2 \cdot 6^2 - 3^2$.
+	
+	\answerbox{891}
+	
+	\hint
+	
+	Benyt potensregnereglen
+	\[
+	(x \cdot y)^n = x^n \cdot y^n
+	\]
+	
+	\hint
+	
+	Sæt $n=2$ og omskriv udtrykket
+	\[
+	5^2 \cdot 6^2 - 3^2 = (5 \cdot 6)^2 - 3^2
+	\]
+	
+	\hint
+	
+	Reducer udtryk
+	\[
+	(5 \cdot 6)^2 - 3^2 = 30^2 - 9 = 900-9 = 891
+	\]
+	
+	
+\end{exercise}
+ 
 \end{document}
