Rettelser i udregning af opgaver

--- a/foundations/fractions/01simplicification.tex
+++ b/foundations/fractions/01simplicification.tex
@@ -45,16 +45,16 @@ Reducer udtryk
 	
 	\hint
 	
-	Beregn nævner og tæller.
+	Omskriv udtryk
 	\[
-	\frac{2 \cdot 4}{3 \cdot 6}  = \frac{8}{18} 
+	\frac{2 \cdot 4}{3 \cdot 6}  = \frac{2 \cdot 4}{3 \cdot 3 \cdot 2} 
 	\]
 	
 	\hint
 	
 	Reducer udtryk.
 	\[
-	\frac{8}{18} = \frac{2 \cdot 4}{2 \cdot 9} = \frac{4}{9}
+	\frac{2 \cdot 4}{3 \cdot 3 \cdot 2}  = \frac{2 \cdot 4}{2 \cdot 9} = \frac{4}{9}
 	\]
 	
 \end{exercise}
@@ -107,24 +107,19 @@ Reducer udtryk
 	
 	\hint
 	
-	Bestem tæller og nævner.
+	Omskriv udtryk
 	\[
-	\frac{3 \cdot 5}{10 \cdot 2} = \frac{15}{20}
+	\frac{3 \cdot 5}{10 \cdot 2} =  \frac{3 \cdot 5}{5 \cdot 2 \cdot 2}
 	\]
 	
 	\hint
 	
-	Omskriv udtryk
+	Reducer udtryk
 	\[
-	 \frac{15}{20} = \frac{3 \cdot 5}{4 \cdot 5}
+	\frac{3 \cdot 5}{5 \cdot 2 \cdot 2} = \frac{3}{4}
 	\]
 	
-	\hint 
-	
-	Reducer udtryk.
-	\[
-	\frac{3 \cdot 5}{4 \cdot 5} = \frac{3}{4}
-	\]
+
 	
 \end{exercise}
 
@@ -232,23 +227,16 @@ Reducer udtryk
 
 	\hint
 
-	Udregn tæller og nævner.
+	Omskriv udtryk
 	\[
-	\frac{12 \cdot 3}{6 \cdot 9} = \frac{36}{54}
+	\frac{12 \cdot 3}{6 \cdot 9} = \frac{6 \cdot 2 \cdot 3}{ 6 \cdot 3 \cdot 3}
 	\]
 	
 	\hint
 
-	Omskriv udtryk 
-	\[
-	\frac{36}{54} = \frac{18 \cdot 2}{18 \cdot 3} 
-	\]
-
-	\hint
-
 	Reducer udtryk 
 	\[
-	 \frac{18 \cdot 2}{18 \cdot 3} = \frac{2}{3}
+	 \frac{6 \cdot 2 \cdot 3}{6 \cdot 3 \cdot 3} = \frac{2}{3} 
 	\]
 	
 \end{exercise}
