--- a/foundations/exponents/04exponentsandfractions.tex
+++ b/foundations/exponents/04exponentsandfractions.tex
@@ -13,26 +13,258 @@
 \tableofcontents
 \newpage
 
-\begin{exercise}{Differentiering 1-1}
+\begin{exercise}{Potensregneregler 4-1}
 
-Bestem $\frac{d}{dx} x^2$.
+Bestem $\frac{a^3}{a^5}$.
 
-\answerbox{2x}
+\answerbox{a^{-2}}
 
 \hint
 
 Benyt formlen
 \[
-\frac{d}{dx} x^n = n \cdot x^{n - 1}
+\frac{x^n}{x^m} = x^{n-m}
 \]
 
 \hint
 
-Sæt $n = 2$
+Sæt $n = 3$ og $m=5$.
 \[
-\frac{d}{dx} x^2 = 2 \cdot x^{2 - 1} = 2 x
+\frac{a^3}{a^5} = a^{3-5}
 \]
 
+\hint 
+
+Reducer udtryk
+\[
+a^{3-5} = a^{-2}
+\]
 \end{exercise}
 
+\newpage
+
+\begin{exercise}{Potensregneregler 4-2}
+	
+	Bestem $\frac{6^2}{3^2}$.
+	
+	\answerbox{4}
+	
+	\hint
+	
+	Benyt formlen
+	\[
+	\frac{x^n}{y^n} = \left( \frac{x}{y}\right)^n
+	\]
+	
+	\hint
+	
+	Sæt $n = 2$.
+	\[
+	\frac{6^2}{3^2} = \left(\frac{6}{3}\right)^2
+	\]
+	
+	\hint 
+	
+	Reducer udtryk
+	\[
+	\left(\frac{6}{3}\right)^2 = 2^2 = 4
+	\]
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 4-3}
+	
+	Bestem $\frac{-8^3}{2^3}$.
+	
+	\answerbox{-64}
+	
+	\hint
+	
+	Benyt formlen
+	\[
+	\frac{x^n}{y^n} = \left( \frac{x}{y}\right)^n
+	\]
+	
+	\hint
+	
+	Sæt $n = 3$.
+	\[
+	\frac{-8^3}{2^3} = \left(\frac{-8}{2}\right)^3
+	\]
+	
+	\hint 
+	
+	Reducer udtryk
+	\[
+	\left(\frac{-8}{2}\right)^3 = -4^3 = -64
+	\]
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 4-4}
+	
+	Bestem $125^{-1/3}$.
+	
+	\answerbox{\frac{1}{5}}
+	
+	\hint
+	
+	Omskriver udtryk
+	\[
+	125^{-1/3} = \frac{1}{125^{1/3}}
+	\]
+	
+	\hint
+	
+	Benytter potensregnereglen
+	\[
+	a^{m/n} = \sqrt[n]{a^m}
+	\]
+	
+	\hint 
+	
+	Sæt $m=1$ og $n=3$
+	\[
+	\frac{1}{125^{1/3}} = \frac{1}{\sqrt[3]{125}}
+	\]
+	
+	\hint
+	
+	Reducer udtryk
+	\[
+	 \frac{1}{\sqrt[3]{125}} = \frac{1}{5}
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 4-5}
+	
+	Bestem $\frac{x^4 \cdot y^{-3}}{x^{-2} \cdot y^{4}}$.
+	
+	\answerbox{x^6 \cdot y^{-7}}
+	
+	\hint
+	
+	Benyt potensregnereglen
+	\[
+	\frac{x^n}{x^m} = x^{n-m}
+	\]
+	
+	\hint 
+	
+	Indsæt størrelser
+	\[
+	\frac{x^4 \cdot y^{-3}}{x^{-2} \cdot y^{4}} = x^{4-(-2)} \cdot y^{-3-4} 
+	\]
+	
+	\hint
+	
+	Reducer udtryk
+	\[
+	x^{4-(-2)} \cdot y^{-3-4}  = x^6 \cdot y^{-7}
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 4-6}
+	
+	Bestem $\frac{(2ab)^2}{ab^2}$.
+	
+	\answerbox{4a}
+	
+	\hint
+	
+	Benyt potensregnereglen
+	\[
+	(x\cdot y)^n = x^n \cdot y^n
+	\]
+	
+	\hint 
+	
+	Sæt $n=2$
+	\[
+	\frac{(2ab)^2}{ab^2} = \frac{2^2 \cdot a^2 \cdot b^2}{ab^2}
+	\]
+	
+	\hint
+	
+	Reducer udtryk
+	\[
+	\frac{2^2 \cdot a^2 \cdot b^2}{a \cdot b^2} = \frac{4 \cdot a^2}{a} = 4a
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 4-7}
+	
+	Bestem $\frac{a^3 \cdot b^{-7}}{a^{-2}\cdot b^{-5}}$.
+	
+	\answerbox{a^5 \cdot b^{-2}}
+	
+	\hint
+	
+	Benyt potensregnereglen
+	\[
+	\frac{x^n}{x^m} = x^{n-m} 
+	\]
+	
+	\hint 
+	
+	Omskriv udtryk
+	\[
+	\frac{a^3 \cdot b^{-7}}{a^{-2}\cdot b^{-5}} = a^{3-(-2)} \cdot b^{-7-(-5)}	
+	\]
+	
+	\hint
+	
+	Reducer udtryk
+	\[
+	a^{3-(-2)} \cdot b^{-7-(-5)} = a^{3+2} \cdot b^{-7+5} = a^5 \cdot b^{-2}
+	\]
+	
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Potensregneregler 4-8}
+	
+	Bestem $\frac{a^3 \cdot b^3 \cdot c^3}{c^{-2} \cdot b^2 \cdot a^{-1}}$.
+	
+	\answerbox{a^4 \cdot b \cdot c^5}
+	
+	\hint
+	
+	Benyt potensregnereglen
+	\[
+	\frac{x^n}{x^m} = x^{n-m} 
+	\]
+	
+	\hint 
+	
+	Omskriv udtryk
+	\[
+	\frac{a^3 \cdot b^3 \cdot c^3}{c^{-2} \cdot b^2 \cdot a^{-1}} = a^{3-(-1)} \cdot b^{3-2} \cdot c^{3-(-2)}
+	\]
+	
+	\hint
+	
+	Reducer udtryk
+	\[
+	a^{3-(-1)} \cdot b^{3-2} \cdot c^{3-(-2)} = a^{3+1} \cdot b^1 \cdot c^{3+2} = a^4 \cdot b \cdot c^5
+	\]
+	
+	
+\end{exercise}
 \end{document}
