--- a/foundations/polynomials/01multiplyparenteses.tex
+++ b/foundations/polynomials/01multiplyparenteses.tex
@@ -13,26 +13,327 @@
 \tableofcontents
 \newpage
 
-\begin{exercise}{Differentiering 1-1}
+\begin{exercise}{Polynomier 1-1}
 
-Bestem $\frac{d}{dx} x^2$.
+Reducér $(2+3x)(5-2x)$.
 
-\answerbox{2x}
+\answerbox{-6x^2 +11x + 10}
 
 \hint
 
-Benyt formlen
+Gang parentesen ud
 \[
-\frac{d}{dx} x^n = n \cdot x^{n - 1}
+(2+3x)(5-2x) = 2 \cdot 5 + 2 \cdot (-2x) + 3x \cdot 5 + 3x \cdot (-2x)
 \]
 
 \hint
 
-Sæt $n = 2$
+Reducér udtryk
 \[
-\frac{d}{dx} x^2 = 2 \cdot x^{2 - 1} = 2 x
+2 \cdot 5 + 2 \cdot (-2x) + 3x \cdot 5 + 3x \cdot (-2x) = 10 -4x + 15x-6x^2
 \]
 
+
+\hint
+
+Samler leddene 
+\[
+10 -4x + 15x-6x^2 = -6x^2 +11x + 10
+\]
+
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Polynomier 1-2}
+	
+	Reducér $(3x+2y+3)^2$.
+	
+	\answerbox{9x^2+18x+4y^2+12y+12xy}
+	
+	\hint
+	
+	Omskriv parentes for overskuelighed
+	\[
+	(3x+2y+3)^2 = (3x+2y+3)(3x+2y+3)
+	\]
+	
+	\hint
+	
+	Gang parentesen ud
+	\begin{multline*}
+	(3x+2y+3)(3x+2y+3) \\
+	= 3x \cdot 3x + 3x \cdot 2y + 3x \cdot 3 + 2y \cdot 3x + 2y \cdot 2y + 2y \cdot 3 + 3 \cdot 3x + 3 \cdot 2y + 3 \cdot 3
+	\end{multline*}
+	
+	\hint
+	
+	Reducér udtryk
+	\begin{multline*}
+	3x \cdot 3x + 3x \cdot 2y + 3x \cdot 3 + 2y \cdot 3x + 2y \cdot 2y + 2y \cdot 3 + 3 \cdot 3x + 3 \cdot 2y + 3 \cdot 3 \\
+	= 9x^2+6xy+9x+6xy+4y^2+6y+9x+6y+9
+	\end{multline*}
+	
+	
+	\hint
+	
+	Samler leddene
+	\[
+	9x^2+6xy+9x+6xy+4y^2+6y+9x+6y+9 = 9x^2+18x+4y^2+12y+12xy
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Polynomier 1-3}
+	
+	Reducér $(5x-3y)(5x+3y)$.
+	
+	\answerbox{25x^2-9y^2}
+	
+	\hint
+	
+	Gang parentesen ud
+	\[
+	(5x-3y)(5x+3y) = 5x \cdot 5x + 5x \cdot 3y - 3y \cdot 5x - 3y \cdot 3y
+	\]
+	
+	\hint
+	
+	Reducér udtryk
+	\[
+	5x \cdot 5x + 5x \cdot 3y - 3y \cdot 5x - 3y \cdot 3y = 25x^2 + 15xy - 15xy - 9y^2
+	\]
+	
+	
+	\hint
+	
+	Samler led
+	\[
+	25x^2 + 15xy - 15xy - 9y^2 = 25x^2-9y^2
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Polynomier 1-4}
+	
+	Reducér $(1+x)^3$.
+	
+	\answerbox{x^3 + 3x^2 + 3x +1}
+	
+	\hint
+	
+	Omskriv udtryk for overskuelighed
+	\[
+	(1+x)(1+x)(1+x)
+	\]
+	
+	\hint
+	
+	Gang de første to parenteser ud
+	\[
+	(1+x)(1+x)(1+x) = (1 \cdot 1 +1x +1x+x^2)(1+x)
+	\]
+	
+	\hint
+	
+	Reducér udtryk
+	\[
+	(1 \cdot 1 +1x +1x+x^2)(1+x) = (1+2x+x^2)(1+x)
+	\]
+	
+	\hint
+	
+	Gang parenteser ud
+	\[
+	(1+2x+x^2)(1+x) = 1 \cdot 1 + 1x +2x \cdot 1 + 2x \cdot x + x^2 \cdot 1 + x^2 \cdot x
+	\]
+	\hint
+
+	Reducér udtryk
+	\[
+	1 \cdot 1 + 1x +2x \cdot 1 + 2x \cdot x + x^2 \cdot 1 + x^2 \cdot x = 1 + 1x + 2x + 2x^2 + x^2 +x^3
+	\]	
+	
+	
+	\hint
+	
+	Samler led
+	\[
+	1 + 1x + 2x + 2x^2 + x^2 +x^3 = x^3 + 3x^2 + 3x +1
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Polynomier 1-5}
+	
+	Reducér $(x^2+y^2+1)(x^2-y^2)$.
+	
+	\answerbox{x^4 +x^2 - y^4 - y^2}
+	
+	\hint
+	
+	Gang parentesen ud
+	\[
+	(x^2+y^2+1)(x^2-y^2) = x^2 \cdot x^2 + x^2 \cdot (-y^2) + y^2 \cdot x^2 + y^2 \cdot (-y^2) + 1 \cdot x^2 - y^2 \cdot 1
+	\]
+	
+	\hint
+	
+	Reducér udtryk
+	\[
+	x^2 \cdot x^2 + x^2 \cdot (-y^2) + y^2 \cdot x^2 + y^2 \cdot (-y^2) + 1 \cdot x^2 - y^2 \cdot 1 = x^4 -x^2 y^2 + x^2y^2 -y^4 + x^2 - y^2
+	\]
+	
+	
+	\hint
+	
+	Samler led
+	\[
+	x^4 -x^2 y^2 + x^2y^2 -y^4 + x^2 - y^2 = x^4 +x^2 - y^4 - y^2
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Polynomier 1-6}
+	
+	Reducér $(6y-7)(8y-9)$.
+	
+	\answerbox{48y^2 - 110y + 63}
+	
+	\hint
+	
+	Gang parentesen ud
+	\[
+	(6y-7)(8y-9) = 6y \cdot 8y + 6y \cdot (-9) -7 \cdot 8y - 7 \cdot (-9)
+	\]
+	
+	\hint
+	
+	Reducér udtryk
+	\[
+	6y \cdot 8y + 6y \cdot (-9) -7 \cdot 8y - 7 \cdot (-9) = 48y^2 -54y - 56y + 63
+	\]
+	
+	
+	\hint
+	
+	Samler led
+	\[
+	48y^2 -54y - 56y - 63 = 48y^2 - 110y + 63
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Polynomier 1-7}
+	
+	Reducér $(2x-1)(2x-2)(2x-3)$.
+	
+	\answerbox{8x^3 - 24x^2 + 22x-6}
+	
+	\hint
+	
+	Gang de første to parenteser ud
+	\[
+	(2x-1)(2x-2)(2x-3) = (2x \cdot 2x + 2x \cdot (-2) -1 \cdot 2x -1 \cdot (-2))(2x-3)
+	\]
+	
+	\hint
+	
+	Reducér udtryk
+	\[
+	(2x \cdot 2x + 2x \cdot (-2) -1 \cdot 2x -1 \cdot (-2))(2x-3) = (4x^2-4x-2x+2)(2x-3)
+	\]
+	
+	\hint
+
+	Gang parenteser ud
+	\begin{multline*}
+	(4x^2-4x-2x+2)(2x-3) = 4x^2 \cdot 2x + 4x^2 \cdot (-3) -4x \cdot 2x -4x \cdot (-3)-2x \cdot 2x \ldots \\ -2x \cdot (-3) + 2 \cdot 2x + 2 \cdot (-3)
+	\end{multline*}
+
+	\hint
+
+	Reducér udtryk
+	\begin{multline*}
+	4x^2 \cdot 2x + 4x^2 \cdot (-3) -4x \cdot 2x -4x \cdot (-3)-2x \cdot 2x -2x \cdot (-3) + 2 \cdot 2x + 2 \cdot (-3) \\
+	=8x^3 - 12x^2 -8x^2+12x-4x^2 +6x + 4x-6
+	\end{multline*}
+	
+	
+	\hint
+	
+	Samler led
+	\[
+	8x^3 - 12x^2 -8x^2+12x-4x^2 +6x + 4x-6 = 8x^3 - 24x^2 + 22x-6
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Polynomier 1-8}
+	
+	Reducér $(a+2b)^2 - (a+2b)(a+b)$.
+	
+	\answerbox{2b^2 + ab}
+	
+	\hint
+	
+	Omskriv parentes for overskuelighed
+	\[
+	(a+2b)^2 - (a+2b)(a+b) = (a+2b)(a+2b) - (a+2b)(a+b)
+	\]
+	
+	
+	\hint
+	
+	Gang parenteser ud
+	\begin{multline*}
+	(a+2b)(a+2b) - (a+2b)(a+b) \\
+	= a \cdot a + a \cdot 2b + 2b \cdot a + 2b \cdot 2b - (a \cdot a + a \cdot b + 2b \cdot a + 2b \cdot b)
+	\end{multline*}
+	
+	\hint
+	
+	Reducér udtryk
+	\begin{multline*}
+	(a \cdot a + a \cdot 2b + 2b \cdot a + 2b \cdot 2b - (a \cdot a + a \cdot b + 2b \cdot a + 2b \cdot b) \\
+	= a^2 + 2ab+2ab+4b^2-(a^2+ab+2ab+2b^2) 
+	\end{multline*}
+	
+	
+	\hint
+	
+	Samler led
+	\[
+	a^2 + 2ab+2ab+4b^2-(a^2+ab+2ab+2b^2)  = a^2 + 4ab + 4b^2 - (a^2 + 3ab + 2b^2)
+	\]
+	
+	\hint
+	
+	Opløs parentes med negativt fortegn
+	\[
+	a^2 + 4ab + 4b^2 - (a^2 + 3ab + 2b^2) = a^2 + 4ab + 4b^2 - a^2 -3ab -2b^2
+	\]
+	
+	
+	\hint
+	
+	Samler led 
+	\[
+	a^2 + 4ab + 4b^2 - a^2 -3ab -2b^2 = 2b^2 + ab
+	\]
+	
 \end{exercise}
 
 \end{document}
