Rettelser af environment

--- a/foundations/polynomials/01multiplyparenteses.tex
+++ b/foundations/polynomials/01multiplyparenteses.tex
@@ -60,24 +60,24 @@ Samler leddene
 	
 	\hint
 	
-	Gang parentesen ud
-	\begin{multline*}
-	(3x+2y+3)(3x+2y+3) \\
-	= 3x \cdot 3x + 3x \cdot 2y + 3x \cdot 3 + 2y \cdot 3x + 2y \cdot 2y + 2y \cdot 3 + 3 \cdot 3x + 3 \cdot 2y + 3 \cdot 3
-	\end{multline*}
+	Gang parenteser ud
+	\begin{align*}
+	(3x&+2+3)(3x+2y+3) \\
+	&= 3x \cdot 3x + 3x \cdot 2y + 3x \cdot 3 + 2y \cdot 3x + 2y \cdot 2y + 2y \cdot 3 + 3 \cdot 3x + 3 \cdot 2y + 3 \cdot 3
+	\end{align*}
 	
 	\hint
 	
 	Reducér udtryk
-	\begin{multline*}
-	3x \cdot 3x + 3x \cdot 2y + 3x \cdot 3 + 2y \cdot 3x + 2y \cdot 2y + 2y \cdot 3 + 3 \cdot 3x + 3 \cdot 2y + 3 \cdot 3 \\
-	= 9x^2+6xy+9x+6xy+4y^2+6y+9x+6y+9
-	\end{multline*}
+	\begin{align*}
+	3x \cdot 3x + 3x \cdot 2y + 3x \cdot 3 &+ 2y \cdot 3x + 2y \cdot 2y + 2y \cdot 3 + 3 \cdot 3x + 3 \cdot 2y + 3 \cdot 3 \\
+	&= 9x^2+6xy+9x+6xy+4y^2+6y+9x+6y+9
+	\end{align*}
 	
 	
 	\hint
 	
-	Samler leddene
+	Saml led
 	\[
 	9x^2+6xy+9x+6xy+4y^2+6y+9x+6y+9 = 9x^2+18x+4y^2+12y+12xy
 	\]
@@ -109,7 +109,7 @@ Samler leddene
 	
 	\hint
 	
-	Samler led
+	Saml led
 	\[
 	25x^2 + 15xy - 15xy - 9y^2 = 25x^2-9y^2
 	\]
@@ -161,7 +161,7 @@ Samler leddene
 	
 	\hint
 	
-	Samler led
+	Saml led
 	\[
 	1 + 1x + 2x + 2x^2 + x^2 +x^3 = x^3 + 3x^2 + 3x +1
 	\]
@@ -193,7 +193,7 @@ Samler leddene
 	
 	\hint
 	
-	Samler led
+	Saml led
 	\[
 	x^4 -x^2 y^2 + x^2y^2 -y^4 + x^2 - y^2 = x^4 +x^2 - y^4 - y^2
 	\]
@@ -225,7 +225,7 @@ Samler leddene
 	
 	\hint
 	
-	Samler led
+	Saml led
 	\[
 	48y^2 -54y - 56y - 63 = 48y^2 - 110y + 63
 	\]
@@ -257,22 +257,23 @@ Samler leddene
 	\hint
 
 	Gang parenteser ud
-	\begin{multline*}
-	(4x^2-4x-2x+2)(2x-3) = 4x^2 \cdot 2x + 4x^2 \cdot (-3) -4x \cdot 2x -4x \cdot (-3)-2x \cdot 2x \ldots \\ -2x \cdot (-3) + 2 \cdot 2x + 2 \cdot (-3)
-	\end{multline*}
+	\begin{align*}
+	(4x^2-4x-2x+2)(2x-3) = 4x^2 \cdot 2x + &4x^2 \cdot (-3) -4x \cdot 2x -4x \cdot (-3) - \\ 
+	&2x \cdot 2x -2x \cdot (-3) + 2 \cdot 2x + 2 \cdot (-3)
+	\end{align*}
 
 	\hint
 
 	Reducér udtryk
-	\begin{multline*}
-	4x^2 \cdot 2x + 4x^2 \cdot (-3) -4x \cdot 2x -4x \cdot (-3)-2x \cdot 2x -2x \cdot (-3) + 2 \cdot 2x + 2 \cdot (-3) \\
-	=8x^3 - 12x^2 -8x^2+12x-4x^2 +6x + 4x-6
-	\end{multline*}
+	\begin{align*}
+	4x^2 \cdot 2x + 4x^2 \cdot (-3) -4x \cdot 2x& -4x \cdot (-3)-2x \cdot 2x -2x \cdot (-3) + 2 \cdot 2x + 2 \cdot (-3) \\
+	&=8x^3 - 12x^2 -8x^2+12x-4x^2 +6x + 4x-6
+	\end{align*}
 	
 	
 	\hint
 	
-	Samler led
+	Saml led
 	\[
 	8x^3 - 12x^2 -8x^2+12x-4x^2 +6x + 4x-6 = 8x^3 - 24x^2 + 22x-6
 	\]
@@ -298,18 +299,18 @@ Samler leddene
 	\hint
 	
 	Gang parenteser ud
-	\begin{multline*}
-	(a+2b)(a+2b) - (a+2b)(a+b) \\
-	= a \cdot a + a \cdot 2b + 2b \cdot a + 2b \cdot 2b - (a \cdot a + a \cdot b + 2b \cdot a + 2b \cdot b)
-	\end{multline*}
+	\begin{align*}
+	(a+2b)(a+&2b) - (a+2b)(a+b) \\
+	&= a \cdot a + a \cdot 2b + 2b \cdot a + 2b \cdot 2b - (a \cdot a + a \cdot b + 2b \cdot a + 2b \cdot b)
+	\end{align*}
 	
 	\hint
 	
 	Reducér udtryk
-	\begin{multline*}
-	(a \cdot a + a \cdot 2b + 2b \cdot a + 2b \cdot 2b - (a \cdot a + a \cdot b + 2b \cdot a + 2b \cdot b) \\
-	= a^2 + 2ab+2ab+4b^2-(a^2+ab+2ab+2b^2) 
-	\end{multline*}
+	\begin{align*}
+	(a \cdot a + a \cdot 2b + 2b \cdot a + 2b \cdot &2b - (a \cdot a + a \cdot b + 2b \cdot a + 2b \cdot b) \\
+	&= a^2 + 2ab+2ab+4b^2-(a^2+ab+2ab+2b^2) 
+	\end{align*}
 	
 	
 	\hint
