--- a/foundations/polynomials/01multiplyparenteses.tex
+++ b/foundations/polynomials/01multiplyparenteses.tex
@@ -30,15 +30,15 @@ Gang parentesen ud
 
 Reducér udtryk
 \[
-2 \cdot 5 + 2 \cdot (-2x) + 3x \cdot 5 + 3x \cdot (-2x) = 10 -4x + 15x-6x^2
+= 10 -4x + 15x-6x^2
 \]
 
 
 \hint
 
-Samler leddene 
+Saml leddene 
 \[
-10 -4x + 15x-6x^2 = -6x^2 +11x + 10
+= -6x^2 +11x + 10
 \]
 
 \end{exercise}
@@ -69,17 +69,16 @@ Samler leddene
 	\hint
 	
 	Reducér udtryk
-	\begin{align*}
-	3x \cdot 3x + 3x \cdot 2y + 3x \cdot 3 &+ 2y \cdot 3x + 2y \cdot 2y + 2y \cdot 3 + 3 \cdot 3x + 3 \cdot 2y + 3 \cdot 3 \\
-	&= 9x^2+6xy+9x+6xy+4y^2+6y+9x+6y+9
-	\end{align*}
+	\[
+	= 9x^2+6xy+9x+6xy+4y^2+6y+9x+6y+9
+	\]
 	
 	
 	\hint
 	
 	Saml led
 	\[
-	9x^2+6xy+9x+6xy+4y^2+6y+9x+6y+9 = 9x^2+18x+4y^2+12y+12xy
+	= 9x^2+18x+4y^2+12y+12xy
 	\]
 	
 \end{exercise}
@@ -103,7 +102,7 @@ Samler leddene
 	
 	Reducér udtryk
 	\[
-	5x \cdot 5x + 5x \cdot 3y - 3y \cdot 5x - 3y \cdot 3y = 25x^2 + 15xy - 15xy - 9y^2
+	= 25x^2 + 15xy - 15xy - 9y^2
 	\]
 	
 	
@@ -111,7 +110,7 @@ Samler leddene
 	
 	Saml led
 	\[
-	25x^2 + 15xy - 15xy - 9y^2 = 25x^2-9y^2
+	= 25x^2-9y^2
 	\]
 	
 \end{exercise}
@@ -142,7 +141,7 @@ Samler leddene
 	
 	Reducér udtryk
 	\[
-	(1 \cdot 1 +1x +1x+x^2)(1+x) = (1+2x+x^2)(1+x)
+	= (1+2x+x^2)(1+x)
 	\]
 	
 	\hint
@@ -155,7 +154,7 @@ Samler leddene
 
 	Reducér udtryk
 	\[
-	1 \cdot 1 + 1x +2x \cdot 1 + 2x \cdot x + x^2 \cdot 1 + x^2 \cdot x = 1 + 1x + 2x + 2x^2 + x^2 +x^3
+	= 1 + 1x + 2x + 2x^2 + x^2 +x^3
 	\]	
 	
 	
@@ -163,7 +162,7 @@ Samler leddene
 	
 	Saml led
 	\[
-	1 + 1x + 2x + 2x^2 + x^2 +x^3 = x^3 + 3x^2 + 3x +1
+	= x^3 + 3x^2 + 3x +1
 	\]
 	
 \end{exercise}
@@ -187,7 +186,7 @@ Samler leddene
 	
 	Reducér udtryk
 	\[
-	x^2 \cdot x^2 + x^2 \cdot (-y^2) + y^2 \cdot x^2 + y^2 \cdot (-y^2) + 1 \cdot x^2 - y^2 \cdot 1 = x^4 -x^2 y^2 + x^2y^2 -y^4 + x^2 - y^2
+	 = x^4 -x^2 y^2 + x^2y^2 -y^4 + x^2 - y^2
 	\]
 	
 	
@@ -195,7 +194,7 @@ Samler leddene
 	
 	Saml led
 	\[
-	x^4 -x^2 y^2 + x^2y^2 -y^4 + x^2 - y^2 = x^4 +x^2 - y^4 - y^2
+	= x^4 +x^2 - y^4 - y^2
 	\]
 	
 \end{exercise}
@@ -219,7 +218,7 @@ Samler leddene
 	
 	Reducér udtryk
 	\[
-	6y \cdot 8y + 6y \cdot (-9) -7 \cdot 8y - 7 \cdot (-9) = 48y^2 -54y - 56y + 63
+	= 48y^2 -54y - 56y + 63
 	\]
 	
 	
@@ -227,7 +226,7 @@ Samler leddene
 	
 	Saml led
 	\[
-	48y^2 -54y - 56y - 63 = 48y^2 - 110y + 63
+	= 48y^2 - 110y + 63
 	\]
 	
 \end{exercise}
@@ -251,7 +250,7 @@ Samler leddene
 	
 	Reducér udtryk
 	\[
-	(2x \cdot 2x + 2x \cdot (-2) -1 \cdot 2x -1 \cdot (-2))(2x-3) = (4x^2-4x-2x+2)(2x-3)
+	= (4x^2-4x-2x+2)(2x-3)
 	\]
 	
 	\hint
@@ -265,17 +264,16 @@ Samler leddene
 	\hint
 
 	Reducér udtryk
-	\begin{align*}
-	4x^2 \cdot 2x + 4x^2 \cdot (-3) -4x \cdot 2x& -4x \cdot (-3)-2x \cdot 2x -2x \cdot (-3) + 2 \cdot 2x + 2 \cdot (-3) \\
-	&=8x^3 - 12x^2 -8x^2+12x-4x^2 +6x + 4x-6
-	\end{align*}
+	\[
+	=8x^3 - 12x^2 -8x^2+12x-4x^2 +6x + 4x-6
+	\]
 	
 	
 	\hint
 	
 	Saml led
 	\[
-	8x^3 - 12x^2 -8x^2+12x-4x^2 +6x + 4x-6 = 8x^3 - 24x^2 + 22x-6
+	= 8x^3 - 24x^2 + 22x-6
 	\]
 	
 \end{exercise}
@@ -307,32 +305,31 @@ Samler leddene
 	\hint
 	
 	Reducér udtryk
-	\begin{align*}
-	(a \cdot a + a \cdot 2b + 2b \cdot a + 2b \cdot &2b - (a \cdot a + a \cdot b + 2b \cdot a + 2b \cdot b) \\
-	&= a^2 + 2ab+2ab+4b^2-(a^2+ab+2ab+2b^2) 
-	\end{align*}
+	\[
+	= a^2 + 2ab+2ab+4b^2-(a^2+ab+2ab+2b^2) 
+	\]
 	
 	
 	\hint
 	
-	Samler led
+	Saml led
 	\[
-	a^2 + 2ab+2ab+4b^2-(a^2+ab+2ab+2b^2)  = a^2 + 4ab + 4b^2 - (a^2 + 3ab + 2b^2)
+	= a^2 + 4ab + 4b^2 - (a^2 + 3ab + 2b^2)
 	\]
 	
 	\hint
 	
 	Opløs parentes med negativt fortegn
 	\[
-	a^2 + 4ab + 4b^2 - (a^2 + 3ab + 2b^2) = a^2 + 4ab + 4b^2 - a^2 -3ab -2b^2
+	= a^2 + 4ab + 4b^2 - a^2 -3ab -2b^2
 	\]
 	
 	
 	\hint
 	
-	Samler led 
+	Saml led 
 	\[
-	a^2 + 4ab + 4b^2 - a^2 -3ab -2b^2 = 2b^2 + ab
+	= 2b^2 + ab
 	\]
 	
 \end{exercise}
