--- a/complexnumbers/01additioncartesianform.tex
+++ b/complexnumbers/01additioncartesianform.tex
@@ -13,26 +13,268 @@
 \tableofcontents
 \newpage
 
-\begin{exercise}{Differentiering 1-1}
+\begin{exercise}{Addition på kartesisk form 1-1}
 
-Bestem $\frac{d}{dx} x^2$.
+Bestem $1+5i+2+7i$.
 
-\answerbox{2x}
+\answerbox{3 + 12i}
 
 \hint
 
-Benyt formlen
+Bestem sum af den reelle del
+
+\hint
+
+Det giver
 \[
-\frac{d}{dx} x^n = n \cdot x^{n - 1}
+1+5i+2+7i = 3 + 5i +7i
 \]
 
 \hint
 
-Sæt $n = 2$
+Bestem sum af den imaginære del 
+
+
+\hint
+
+Det giver 
 \[
-\frac{d}{dx} x^2 = 2 \cdot x^{2 - 1} = 2 x
+3 + 5i +7i= 3 + 12i
 \]
 
 \end{exercise}
+
+\newpage
+
+\begin{exercise}{Addition på kartesisk form 1-2}
+	
+	Bestem $3+5i+2+3i$.
+	
+	\answerbox{5 + 8i }
+	
+	\hint
+	
+	Bestem sum af den reelle del
+	
+	\hint
+	
+	Det giver
+	\[
+	3+5i+2+3i = 5 + 5i+3i
+	\]
+	
+	\hint
+	
+	Bestem sum af den imaginære del 
+	
+	
+	\hint
+	
+	Det giver 
+	\[
+	5 + 5i+3i = 5 + 8i 
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Addition på kartesisk form 1-3}
+	
+	Bestem $4-5i+2+7i$.
+	
+	\answerbox{3 + 12i}
+	
+	\hint
+	
+	Bestem sum af den reelle del
+	
+	\hint
+	
+	Det giver
+	\[
+	4-5i+2+7i = 6 -5i +7i
+	\]
+	
+	\hint
+	
+	Bestem sum af den imaginære del 
+	
+	
+	\hint
+	
+	Det giver 
+	\[
+	2 -5i +7i = 6+2i
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Addition på kartesisk form 1-4}
+	
+	Bestem $7+2i+1+3i$.
+	
+	\answerbox{8 + 5i}
+	
+	\hint
+	
+	Bestem sum af den reelle del
+	
+	\hint
+	
+	Det giver
+	\[
+	7+2i+1+3i = 8 + 2i+3i
+	\]
+	
+	\hint
+	
+	Bestem sum af den imaginære del 
+	
+	
+	\hint
+	
+	Det giver 
+	\[
+	8 + 2i+3i = 8 + 5i
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Addition på kartesisk form 1-5}
+	
+	Bestem $2+8i+9+12i$.
+	
+	\answerbox{11 + 20i}
+	
+	\hint
+	
+	Bestem sum af den reelle del
+	
+	\hint
+	
+	Det giver
+	\[
+	2+8i+9+12i = 11 + 8i + 12i
+	\]
+	
+	\hint
+	
+	Bestem sum af den imaginære del 
+	
+	
+	\hint
+	
+	Det giver 
+	\[
+	11 + 8i + 12i = 11 + 20i
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Addition på kartesisk form 1-6}
+	
+	Bestem $8+4i+2-2i$.
+	
+	\answerbox{10  + 2i}
+	
+	\hint
+	
+	Bestem sum af den reelle del
+	
+	\hint
+	
+	Det giver
+	\[
+	8+4i+2-2i =  10 + 4i - 2i
+	\]
+	
+	\hint
+	
+	Bestem sum af den imaginære del 
+	
+	
+	\hint
+	
+	Det giver 
+	\[
+	10 + 4i - 2i = 10  + 2i
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Addition på kartesisk form 1-7}
+	
+	Bestem $6+4i+7+3i$.
+	
+	\answerbox{13  + 7i}
+	
+	\hint
+	
+	Bestem sum af den reelle del
+	
+	\hint
+	
+	Det giver
+	\[
+	6+4i+7+3i = 13 + 4i +3i
+	\]
+	
+	\hint
+	
+	Bestem sum af den imaginære del 
+	
+	
+	\hint
+	
+	Det giver 
+	\[
+	13 + 4i +3i = 13  + 7i
+	\]
+	
+\end{exercise}
+
+\newpage
+
+\begin{exercise}{Addition på kartesisk form 1-8}
+	
+	Bestem $5+3i+9+3i$.
+	
+	\answerbox{14 + 6i}
+	
+	\hint
+	
+	Bestem sum af den reelle del
+	
+	\hint
+	
+	Det giver
+	\[
+	5+3i+9+3i = 14 + 3i + 3i
+	\]
+	
+	\hint
+	
+	Bestem sum af den imaginære del 
+	
+	
+	\hint
+	
+	Det giver 
+	\[
+	14 + 3i + 3i = 14 + 6i
+	\]
+	
+\end{exercise}
+
+
 
 \end{document}
