Små notations ændringer.

--- a/differentialequations/separablediffequation.tex
+++ b/differentialequations/separablediffequation.tex
@@ -98,7 +98,7 @@ hvor $A=K_2-K_1$
 	
 	\hint
 	
-	Derefter indsættes $y=7$.
+	Derefter indsættes $y(2)=7$.
 
 	\hint 
 	
@@ -204,7 +204,7 @@ hvor $A=K_2-K_1$
 	
 	\hint
 	
-	Derefter indsættes $y=5$.
+	Derefter indsættes $y(2)=5$.
 	
 	\hint 
 	
@@ -297,7 +297,7 @@ hvor $A=K_2-K_1$
 	
 	\hint
 	
-	Derefter indsættes $y=5$.
+	Derefter indsættes $y(\pi)=5$.
 	
 	\hint 
 	
@@ -419,7 +419,7 @@ hvor $A=K_2-K_1$
 	
 	\hint
 	
-	Derefter indsættes $y=7$.
+	Derefter indsættes $y(0)=7$.
 	
 	\hint 
 	
@@ -548,7 +548,7 @@ hvor $A=K_2-K_1$
 	
 	\hint
 	
-	Derefter indsættes $y=12$.
+	Derefter indsættes $y(9)=12$.
 	
 	\hint 
 	
