--- a/foundations/exponents/02negativeexponents.tex
+++ b/foundations/exponents/02negativeexponents.tex
@@ -126,7 +126,7 @@ Benyt potensregnereglen $ x^n \cdot x^m  = x^{n+m}$
 
 \begin{exercise}{Potensregneregler 2-5}
 	
-	Bestem $-2^{-4}$.
+	Bestem $(-2)^{-4}$.
 	
 	\answerbox{\frac{1}{16}}
 	
@@ -140,7 +140,7 @@ Benyt potensregnereglen $ x^n \cdot x^m  = x^{n+m}$
 	
 	Sæt $x=-2$ og $n=4$ 
 	\[
-	-2^{-4} = \frac{1}{-2^4} = \frac{1}{16}
+	(-2)^{-4} = \frac{1}{(-2)^4} = \frac{1}{16}
 	\]
 	
 \end{exercise}
