--- a/complexnumbers/03multiplicationcartesianform.tex
+++ b/complexnumbers/03multiplicationcartesianform.tex
@@ -41,7 +41,7 @@ Bestem sum af den reelle led
 
 Det giver
 \[
-6 + 10i +6i + 10 \cdot (-1) = -4 + 10i + 6i
+6 + 10i +6i - 10 = -4 + 10i + 6i
 \]
 
 \hint
@@ -88,7 +88,7 @@ Det giver
 	
 	Det giver
 	\[
-	9 + 9i + 9i + 9 \cdot (-1) = 0 + 9i+9i
+	9 + 9i + 9i - 9 = 0 + 9i+9i
 	\]
 	
 	\hint
@@ -135,7 +135,7 @@ Det giver
 	
 	Det giver
 	\[
-	8 - 8i +4i -4 \cdot (-1) =  12 - 8i +4i
+	8 - 8i +4i +4 =  12 - 8i +4i
 	\]
 	
 	\hint
@@ -171,7 +171,7 @@ Det giver
 	
 	Saml led og udnyt at $i^2 = -1$
 	\[
-	25 -10i +10i -4i^2 = 25 - 10i + 10i +4
+	25 -10i +10i -4i^2 = 25 - 10i + 10i -4 \cdot (-1)
 	\]
 	
 	\hint
@@ -194,7 +194,7 @@ Det giver
 	
 	Det giver 
 	\[
-	29 -10i + 10i = 29 - 0i = 29
+	29 -10i + 10i = 29 + i(-10+1) = 29
 	\]
 	
 \end{exercise}
@@ -218,7 +218,7 @@ Det giver
 	
 	Saml led og udnyt at $i^2 = -1$
 	\[
-	6 + 6i + 6i + 6i^2 = 6+ 6i + 6i - 6
+	6 + 6i + 6i + 6i^2 = 6+ 6i + 6i + 6 \cdot (-1)
 	\]
 	
 	\hint
@@ -250,22 +250,22 @@ Det giver
 
 \begin{exercise}{Multiplikation på kartesisk form 1-6}
 	
-	Bestem $(2+2i)(3+5i)$.
+	Bestem $(7-2i)(3-4i)$.
 	
-	\answerbox{-4  + 16i}
+	\answerbox{13 - 34i}
 	
 	\hint
 	
 	Gang de to parenteser sammen
 	\[
-	(2+2i)(3+5i) = 2 \cdot 3 + 2 \cdot 5i + 2i \cdot 3 + 2i \cdot 5i
+	(7-2i)(3-4i) = 7 \cdot 3 + 7 \cdot (-4i) - 2i \cdot 3 - 2i \cdot (-4i)
 	\]
 	
 	\hint 
 	
 	Saml led og udnyt at $i^2 = -1$
 	\[
-	6 + 10i  + 6i + 10i^2 = 6 + 10i +6i + 10 \cdot (-1)
+	21 -28i -6i + 8i^2  = 21 -28i -6i + 8 \cdot (-1)
 	\]
 	
 	\hint
@@ -276,7 +276,7 @@ Det giver
 	
 	Det giver
 	\[
-	6 + 10i +6i + 10 \cdot (-1) = -4 + 10i + 6i
+	21 -28i -6i - 8	= 13 -28i -6i
 	\]
 	
 	\hint
@@ -288,7 +288,7 @@ Det giver
 	
 	Det giver 
 	\[
-	6 + 10i +6i + 10 \cdot (-1) = -4  + 16i
+	13 -28i -6i = 13 + i(-28-6) = 13 - 34i
 	\]
 	
 \end{exercise}
@@ -297,22 +297,22 @@ Det giver
 
 \begin{exercise}{Multiplikation på kartesisk form 1-7}
 	
-	Bestem $(2+2i)(3+5i)$.
+	Bestem $(4+3i)(3+4i)$.
 	
-	\answerbox{-4  + 16i}
+	\answerbox{25i}
 	
 	\hint
 	
 	Gang de to parenteser sammen
 	\[
-	(2+2i)(3+5i) = 2 \cdot 3 + 2 \cdot 5i + 2i \cdot 3 + 2i \cdot 5i
+	(4+3i)(3+4i) = 4 \cdot 3 + 4 \cdot 4i + 3i \cdot 3 + 3i \cdot 4i 
 	\]
 	
 	\hint 
 	
 	Saml led og udnyt at $i^2 = -1$
 	\[
-	6 + 10i  + 6i + 10i^2 = 6 + 10i +6i + 10 \cdot (-1)
+	12 + 16i + 9i + 12i^2 = 12+ 16i + 9i + 12 \cdot (-1)
 	\]
 	
 	\hint
@@ -323,7 +323,7 @@ Det giver
 	
 	Det giver
 	\[
-	6 + 10i +6i + 10 \cdot (-1) = -4 + 10i + 6i
+	12+ 16i + 9i - 12 = 0 + 16i +9i
 	\]
 	
 	\hint
@@ -335,7 +335,7 @@ Det giver
 	
 	Det giver 
 	\[
-	6 + 10i +6i + 10 \cdot (-1) = -4  + 16i
+	16i + 9i = i(16+9) = 25i
 	\]
 	
 \end{exercise}
@@ -344,22 +344,22 @@ Det giver
 
 \begin{exercise}{Multiplikation på kartesisk form 1-8}
 	
-	Bestem $(2+2i)(3+5i)$.
+	Bestem $(5+3i)(6+2i)$.
 	
-	\answerbox{-4  + 16i}
+	\answerbox{24 + 28i}
 	
 	\hint
 	
 	Gang de to parenteser sammen
 	\[
-	(2+2i)(3+5i) = 2 \cdot 3 + 2 \cdot 5i + 2i \cdot 3 + 2i \cdot 5i
+	(5+3i)(6+2i) = 5 \cdot 6 + 5 \cdot 2i + 3i \cdot 6 + 3i \cdot 2i
 	\]
 	
 	\hint 
 	
 	Saml led og udnyt at $i^2 = -1$
 	\[
-	6 + 10i  + 6i + 10i^2 = 6 + 10i +6i + 10 \cdot (-1)
+	30 + 10i + 18i + 6i^2 = 30 + 10i + 18i + 6 \cdot (-1)
 	\]
 	
 	\hint
@@ -370,7 +370,7 @@ Det giver
 	
 	Det giver
 	\[
-	6 + 10i +6i + 10 \cdot (-1) = -4 + 10i + 6i
+	30 + 10i + 18i -6 = 24 + 10i + 18i
 	\]
 	
 	\hint
@@ -382,7 +382,7 @@ Det giver
 	
 	Det giver 
 	\[
-	6 + 10i +6i + 10 \cdot (-1) = -4  + 16i
+	24 + 10i + 18i = 24 + i(10+18) = 24 + 28i
 	\]
 	
 \end{exercise}
