Some minor changes.

--- a/differentialequations/separablediffequationgeneral.tex
+++ b/differentialequations/separablediffequationgeneral.tex
@@ -77,9 +77,9 @@ hvor $A=K_2-K_1$
 	\[
 	\frac{dy}{dx} = x  \cdot \frac{1}{y}
 	\]
-	Kald den ukendte konstant for A.
+	Se på tilfældet hvor $y$ er positivt og kald den ukendte konstant for A.
 	
-	$\textrm{Generel løsning } y(x)$ = \answerbox{\pm \sqrt{x^2 + A}}
+	$\textrm{Generel løsning } y(x)$ = \answerbox{\sqrt{x^2 + A}}
 	
 	\hint
 	
@@ -125,9 +125,17 @@ hvor $A=K_2-K_1$
 	hvor $A=2(K_2-K_1)$
 	
 	\hint
+	
 	$y$ isoleres ved at tage kvadratroden af begge sider
 	\[
 	y = \pm \sqrt{x^2 + A}
+	\]
+
+	\hint
+	
+	Da vi kun er interesserede i den positive løsning, har vi resultatet:
+	\[
+	y = \sqrt{x^2 + A}
 	\]
 	
 \end{exercise}
